--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,8 +2,10 @@
 TERM = "xterm-256color"
 
 [window]
+option_as_alt = "Both"
 padding.x = 10
 padding.y = 10
+startup_mode = "Maximized"  # "Windowed" | "Maximized" | "Fullscreen" | "SimpleFullscreen"
 
 decorations = "Buttonless"
 
